css: avoid .torrent button wrapping

--- a/static/style.css
+++ b/static/style.css
@@ -352,6 +352,7 @@ h3 {
 }
 .torrent {
   float: left;
+  white-space: nowrap;
 }
 /***
    * This button has been copied from
